# SomLauncher

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  SomLauncher.sln  SomProject.sln
MocJsonLib/: CMakeLists.txt  MocJsonLib.idb  MocJsonLib.vcxproj
MocJsonLib/Json/: Json.cpp  Json.h  JsonParcer.cpp  JsonParcer.h  JsonTypes.h
SomAdditionalsLib/: Additionals.cpp  Additionals.h  CMakeLists.txt  SomAdditionalsLib.vcxproj  pch.h
SomInstaller/: SomInstallerMainWindow.cpp  SomInstallerMainWindow.h  SomInstallerMainWindow.ui  main.cpp
SomInstaller/Installation/: Installation.h
SomJson/: SomJson.h  main.cpp
SomJson/Json/: Json.cpp  Json.h  JsonArray.cpp  JsonBool.cpp  JsonNode.cpp  JsonNodeVirtuals.cpp  JsonNull.cpp  JsonNumber.cpp  JsonObject.cpp  JsonParcer.cpp  JsonParcer.h  JsonString.cpp  JsonTypes.h
SomJsonLib/: CMakeLists.txt  main.cpp
SomJsonLib/Json/: Json.cpp  Json.h  JsonArray.cpp  JsonBool.cpp  JsonNode.cpp  JsonNodeVirtuals.cpp  JsonNull.cpp  JsonNumber.cpp  JsonObject.cpp  JsonParcer.cpp  JsonParcer.h  JsonString.cpp  JsonTypes.h
SomLauncher/: SomLauncher.vcxproj  SomLauncher.vcxproj.filters  SomLauncherMainWindow.cpp  SomLauncherMainWindow.h  main.cpp
SomLauncherCpp/: Additionals.cpp  Additionals.h  Archives.cpp  Archives.h  CallbackDict.cpp  CallbackDict.h  DATA.json  DownloadClasses.cpp  DownloadClasses.h  Json.cpp  Json.h  Minecraftus.cpp  Minecraftus.h  SERVERS.json  SOMCONFIG.json  SOMCONFIG_template.json  SomDict.cpp  SomDict.h  SomLauncherCpp.pri  SomLauncherCpp.pro  SomLauncherCpp.rc  SomLauncherCpp.vcxproj  SomLauncherCpp.vcxproj.filters  SomLauncherMainWindow.cpp  SomLauncherMainWindow.h  SomLauncherMainWindow.qrc  SomLauncherMainWindow.ui  TODO_List.md  Upgrader.cpp  Upgrader.h  all.json  basic_xml.cpp  basic_xml.h  cpp.hint  main.cpp  manifest.json  resource1.h  version_manifest.json
SomLauncherCpp/Additionals/: Additionals.cpp  Additionals.h
SomLauncherCpp/Archives/: Archives.cpp  Archives.h  qzipreader_p.h  qzipwriter_p.h
SomLauncherCpp/Callbacks/: CallbackDict.cpp  CallbackDict.h  QCallback.cpp  QCallback.h
SomLauncherCpp/Client/: StartProcess.cpp  StartProcess.h
SomLauncherCpp/Databases/: SQLBased.cpp  SQLBased.h
SomLauncherCpp/Encryption/: PBKDF2SHA256.h
SomLauncherCpp/Exceptions/: FileOutsideMinecraftDirectoryException.cpp  FileOutsideMinecraftDirectoryException.h  TerminateProgrammException.h
SomLauncherCpp/Form/: LoginAccountForm.cpp  LoginAccountForm.h  LoginAccountForm.ui  MainWindowExtensions.cpp  NewsViewWidget.cpp  NewsViewWidget.h  NewsViewWidget.ui  ServerChangerForm.cpp  ServerChangerForm.h  ServerChangerForm.ui  ServerWidget.cpp  ServerWidget.h  (+14 more)
SomProjectCpp1/: Additionals.cpp  Additionals.h  CallbackDict.cpp  CallbackDict.h  ChangeServerForm.cpp  ChangeServerForm.h  DATA.json  DownloadClasses.cpp  DownloadClasses.h  Extensions.cpp  Json.cpp  Json.h  MainForm.cpp  MainForm.h  Minecraftus.cpp  Minecraftus.h  SERVERS.json  SomDict.h  SomProjectCpp1.vcxproj  SomProjectCpp1.vcxproj.filters  TODO_List.md  main.cpp
SomSetup/: SomSetup.vdproj
SomSetup_advinst1/: SomSetup_advinst1.aip  SomSetup_advinst1.aiproj
test/: DATA2.json  test.vcxproj  test.vcxproj.filters
upgrader/: upgrader.vdproj
(+290 files in other folders)
